--- a/src/ListenTogether/Pages/MobileShell.xaml
+++ b/src/ListenTogether/Pages/MobileShell.xaml
@@ -12,6 +12,11 @@
        Shell.TabBarBackgroundColor="{AppThemeBinding Dark={StaticResource DarkTabBarBackgroundColor},Light={StaticResource LightTabBarBackgroundColor}}"
        >
     <TabBar>
+        <Tab Title="发现"
+             Icon="{AppThemeBinding Light=discover.png, Dark=discover.png}">
+            <ShellContent Title="咪咕音乐" ContentTemplate="{DataTemplate pages:MiGuPage}"/>
+            <ShellContent Title="网易云音乐" ContentTemplate="{DataTemplate pages:NetEasePage}"/>
+        </Tab>
         <Tab Title="{Binding SearchResult.Title}"
              Icon="{Binding SearchResult.Icon}">
             <ShellContent ContentTemplate="{DataTemplate pages:SearchResultPage}" />
