--- a/src/ListenTogether/Pages/DesktopShell.xaml
+++ b/src/ListenTogether/Pages/DesktopShell.xaml
@@ -28,7 +28,7 @@
     </Shell.FlyoutHeader>
 
     <FlyoutItem Title="发现"
-                Icon="{AppThemeBinding Light=home.png, Dark=home_dark.png}">
+                Icon="{AppThemeBinding Light=discover.png, Dark=discover.png}">
         <Tab Title="咪咕音乐">
             <ShellContent ContentTemplate="{DataTemplate pages:MiGuPage}"/>
         </Tab>
